# stochastic-rsi-backtesting

./: .env  .gitignore  Readme.md  _tmp_fetch.py  pyproject.toml
app/: main.py
app/components/: charts.py  metrics_display.py  sidebar.py
config/: settings.py
src/backtesting/: engine.py  metrics.py  position.py
src/data/: bybit_client.py  database.py  resampler.py
src/indicators/: moving_average.py  stochastic_rsi.py
src/strategy/: base_strategy.py  ma200_stochrsi.py
src/utils/: excel_styles.py  logger.py  logger_confg.py  storage.py  validators.py
storage/backtests/: 20251105060322_ab555d16a4684b2cac9e0153d4cc0d21.json  20251105060408_b5c3b8231a3e43679e1634316c3b8f0f.json  20251105152514_5ca3608ec64844babe67af87c78e242b.json  20251105152514_5ca3608ec64844babe67af87c78e242b_equity.csv  20251105152549_34c81530347641c99c6e2e8ced95d480.json  20251105152549_34c81530347641c99c6e2e8ced95d480_trades.csv  20251105152851_353e1cc8367b486c9ca5e3d755a17790.json  20251105152851_353e1cc8367b486c9ca5e3d755a17790_equity.csv  20251105152851_353e1cc8367b486c9ca5e3d755a17790_trades.csv  20251105153035_8f74db179e8a47759da6b1d74b255dba.json  20251105153035_8f74db179e8a47759da6b1d74b255dba_equity.csv  20251105153035_8f74db179e8a47759da6b1d74b255dba_trades.csv  20251105154015_9b58b28af53c4590ad05780f60bba212.json  20251105154015_9b58b28af53c4590ad05780f60bba212_equity.csv  20251105154015_9b58b28af53c4590ad05780f60bba212_price.csv  (+1 more)
tests/: test_backtesting.py  test_database.py  test_indicators.py  test_storage.py  test_strategy.py
